Fixed uneven inputs

--- a/public/CSS/login.css
+++ b/public/CSS/login.css
@@ -93,7 +93,7 @@ body {
     outline: none;
     font-size: 16px;
     color: white;
-    padding: 0px 45px 20px 20px;
+    padding: 20px 45px 20px 20px;
 }
 
 .input-box input::placeholder {
