--- a/public/CSS/signup.css
+++ b/public/CSS/signup.css
@@ -103,7 +103,7 @@ video {
     border-radius: 40px;
     font-size: 16px;
     color: white;
-    padding: 0px 45px 20px 20px;
+    padding: 20px 45px 20px 20px;
 }
 
 .input-box input::placeholder {
